--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -77,6 +77,8 @@ jobs:
         if: matrix.platform == 'linux'
         run: |
           sudo apt-get update
+          
+          # Install essential Qt dependencies
           sudo apt-get install -y \
             libxcb-cursor0 \
             libxcb-xinerama0 \
@@ -84,25 +86,37 @@ jobs:
             libxcb-xtest0 \
             libxcb-xfixes0 \
             libxcb-shape0 \
-            libglib2.0-0 \
-            libopengl0 \
-            libgl1-mesa-dev \
-            libfontconfig1 \
-            libxrender1 \
-            libdbus-1-3 \
-            libxkbcommon-x11-0 \
             libxcb-icccm4 \
             libxcb-image0 \
             libxcb-keysyms1 \
             libxcb-render-util0 \
-            libegl1-mesa \
+            libglib2.0-0 \
+            libfontconfig1 \
+            libxrender1 \
+            libdbus-1-3 \
+            libxkbcommon-x11-0 \
             libxrandr2 \
             libxss1 \
             libxcursor1 \
             libxcomposite1 \
-            libasound2 \
             libxi6 \
             libxtst6
+            
+          # Install OpenGL/Mesa libraries (try different package names)
+          sudo apt-get install -y libopengl0 || \
+          sudo apt-get install -y libgl1-mesa-dev || \
+          sudo apt-get install -y libgl1-mesa-glx || \
+          echo "Warning: Could not install OpenGL libraries"
+          
+          # Install EGL libraries (optional)
+          sudo apt-get install -y libegl1-mesa || \
+          sudo apt-get install -y libegl1 || \
+          echo "Warning: Could not install EGL libraries"
+          
+          # Install audio libraries (try different package names for Ubuntu 24.04)
+          sudo apt-get install -y libasound2t64 || \
+          sudo apt-get install -y libasound2 || \
+          echo "Warning: Could not install audio libraries"
 
       - name: 📝 Generate PyInstaller spec
         run: |
@@ -225,7 +239,10 @@ jobs:
           if [ "${{ matrix.platform }}" = "windows" ]; then
             package_name="${{ env.APP_NAME }}-${version}-${{ matrix.artifact_name }}.zip"
             cd dist
-            powershell -Command "Compress-Archive -Path '${{ env.APP_NAME }}/*' -DestinationPath '../${package_name}' -CompressionLevel Optimal"
+            # Use 7zip or zip utility (available in GitHub Actions Windows runner)
+            7z a -tzip "../${package_name}" "${{ env.APP_NAME }}/*" || \
+            zip -r "../${package_name}" "${{ env.APP_NAME }}/" || \
+            echo "Warning: Could not create ZIP package"
           elif [ "${{ matrix.platform }}" = "macos" ]; then
             package_name="${{ env.APP_NAME }}-${version}-${{ matrix.artifact_name }}.zip"
             cd dist
